angular-frontend/src/styles.scss
@import 'ngx-toastr/toastr';
@import "primeicons/primeicons.css";

:root {
  font-family: 'ZuehlkeFont', sans-serif !important;
  color: var(--primary);
  --secondary: rgb(131, 79, 135);
  --primary: rgb(38, 38, 38);
  --tertiary: rgb(255, 130, 10);
  --quaternary: rgb(88, 160, 190);
  --quinary: rgb(165, 165, 165);
}

html, body {
  margin: 0;
  padding: 0;
}

a,
h2,
h3,
h4,
h5 {
  color: var(--primary);
}

h1 {
  color: var(--secondary);
  font-size: 4rem;
  margin-bottom: 0;
  padding-bottom: 3rem;
}

h2 {
  font-size: 3rem;
  margin-bottom: 0;
  color: var(--tertiary);
  padding-bottom: 2rem;
}

a:hover {
  color: var(--secondary);
}

@font-face {
  font-family: "ZuehlkeFont";
  src: local("ZuehlkeFont"),
    url("./assets/AAZuehlke.ttf") format("truetype");
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url("./assets/MaterialIcons.woff2") format('woff2');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
}

